--- a/vehicale list site/style.css
+++ b/vehicale list site/style.css
@@ -20,6 +20,7 @@ body{
     height: 600px;
     background-repeat: no-repeat;
     background-size: cover;
+    background-position:center;
 }
 .new-arrivals-text{
     font-size: 40px;
